# properti-scrapy

./: .gitignore  README.md  pyproject.toml  requirements.txt
rumah_scrapper/: scrapy.cfg
rumah_scrapper/rumah_scrapper/: helpers.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  user_agent.txt
rumah_scrapper/rumah_scrapper/spiders/: properti_spider.py  rumah_spider.py
