[tool.poetry]
name = "scrapy-tutorial"
version = "0.1.0"
description = "Web crawling practice using scrapy"
authors = ["yosep34 <yosepalexsander9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "2.2.1"
SQLAlchemy = "^1.3.20"
python-decouple = "^3.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
